--- a/article/sg0/doc/0136.md
+++ b/article/sg0/doc/0136.md
@@ -1,165 +1,154 @@
 # 盟誓的文艺复兴 - 14
 > 1.055821  
-> [ 2011/02/02 ] 冈伦极力争取时间
+> [ 2011/02/02 ] 莱耶丝准备给篝植入红莉栖记忆，疑似机器故障没有成功。形势反转后她决定自己接收记忆，结果把自己“洗白”了。  
 
-| [←prev](./0131) | [menu](../) | [next→](./0133) |
+| [←prev](./0135) | [menu](../) | [next→](./0137) |
 
 ---
 
-“DURPA……美国国防高等研究计划局？莱耶丝教授……怎么会……？”  
-“通过小型蓝牙耳机，我听到了真帆的声音。”  
-“为了在不备之时互相取得联系，我一直在与桶子的手机保持通话状态。”  
-“冈伦……再帮我拖一段时间。”  
-“在这种情况下，拖延时间，吗。”  
-“说得有够离谱。”  
-“但是，迄今为止，我也拜托了桶子很多离谱的事。”  
-“这次应该由我来响应他的离谱。”  
-“不能让她对篝下手。”  
-“铃羽被剥夺了武器，难以动武。”  
-“必须要做些什么，我得驾驭这个场面才行。”  
-“军，军方的人，为什么……”  
-“本来，我所属的队伍是研究 *Brain·Washing* 的。”  
-“洗脑……那么说，篝……”  
-“话说在前，把她搞成这样的并不是我。是他们哦。”  
-“他们——是说倒在那里的那伙人吧。”  
-“鬼知道呢。说起来，为什么军人要研究洗脑？”  
-“这是件没必要问的事。”  
-“但是，我必须在桶子黑完之前，想方设法拖延时间。”  
-“肯定是为了创造能随心所欲地差遣的战士啊。”  
-“为了创造不会抱怨，不畏惧死亡，贯彻为国捐躯精神的最强战士……”  
-“……”  
-“也不是什么稀罕事呀。这种事，早在一百年前甚至更早，就在全世界进行着嘛。”  
-“但是呢，我们发现了，不做洗脑这样苦差事，也能创造出最强的战士……”  
-“那就是 AI 战士哦——”  
-“AI 战士……”  
-“乍一听是个非常俗的词语，却相应地使人毛骨悚然。”  
-“原来如此……你是说要把人工智能植入士兵的脑中吧。”  
-“如此这般，你们就能大量孕育出拥有着同样高程度的头脑和思考能力的战士……”  
-“嚯——？”  
-“而且，如果把有关特殊能力的记忆安装进全体士兵里，他们甚至会变得无论什么样的任务都能完成。”  
-“就是这样！*Rintaro*，理解得真快呢。  
- 而且，将来还能凭意识共享，变得能安排出更加周翔的高度合作呢。  
- 怎样？很厉害吧？”  
-“那种事，不可能会被许可……”  
-“真是陈词滥调呢。”  
-“……”  
-“虽然我担心她会不会被激怒而上前揍她，但铃羽一直都很冷静。”  
-“莱耶丝与篝近在咫尺。”  
-“无论铃羽有多么灵敏，在没有枪的情况下，要是篝被抢先下了毒手的话就全盘皆输了。”  
-“铃羽应该正分析着现状，为了找到反击的机会，专注地绷紧神经。”  
-“听好了？我们可是维持着世界的治安哦。正因为有我军，这个世界才能保持和平哦。”  
-“能成为捍卫和平的战士，这应该也是他们的夙愿。”  
-“真是独断的歪理。”  
-“是件不可能被接受的事。”  
-“但是……”  
+“你想对篝做什么？”  
+铃羽即使仍处在双手背在头后的状态，也以只凭眼神就能杀人的气势紧盯着莱耶丝。  
+“你心知肚明吧——我要把她脑中的记忆替换成 *Makise·Kurisu* 的。”  
+也就是说，之前世界线上的篝，说不定不是被 STRATFO 那群家伙而是被他们——不只如此，那时袭击 LAB 的穿黑色骑手装的女人，该不会就是——  
+“你不用摆出那副表情哦，毕竟为了这个，我们已经用动物和人类反复试验过不知道多少次了。”  
+莱耶丝爱抚着篝的脸颊。  
+“说起来，这系统之前有致命性缺陷。但是，这回已经解决了那个问题。  
+ 此外，她也具备着极高的适应力，一定会成功的……”  
+莱耶丝一个字一个字地慢慢说着，让人仿佛要迷醉在她的语调之中。  
+“红莉栖的记忆、头脑……都将会在这孩子的身上重现哦。  
+ 这样的话，记忆的黑箱也将不复存在。  
+ 她一定会对我们言听计从，把有关于时间机器的情报全\~部告诉我们。  
+ 已经不需要红莉栖的笔记本电脑和硬盘了，只要有她就可以了……”  
+莱耶丝将红润的双唇凑近篝，如恶魔般在她耳边呢喃：  
+“呐，*Kagari*……你也想成为 *Kurisu* 吧？”  
+“别！篝！别听那家伙的话！”  
+但是，篝一动不动。  
+“被称为天才的头脑，将会为你所有，你将会成为掀起世界革新的存在……  
+ 你不觉得这是一桩美事吗？你的回答是？”  
+篝的双唇微微颤动。  
+“好……的……”  
+“呵呵……乖孩子……”  
+“篝……”  
+“*Rintaro*，这也是你选择的哦。  
+ 明明如果你乖乖答应我的交换条件，结局可能就会不同了呢。  
+ 而且……实际上，你不也想与红莉栖重逢吗？”  
+我……  
+“构成一个人的是他的记忆，是记忆创造出了那个人……  
+ 拥有红莉栖记忆的篝，会变成红莉栖本人哦。这样的话，你也会很高兴吧？”  
+我——  
+“而且红莉栖也会——”  
+“可恶——！开什么玩笑！！！”  
+我怒吼出来，声音大得连自己都吓到了。  
+“红莉栖会高兴？怎么可能啊！！  
+ 就算篝的记忆被替换成红莉栖的，那她也不是红莉栖！！  
+ 要是知道自己的记忆出于目的所利用，她决不会高兴的！！  
+ 不要……不要小瞧牧濑红莉栖啊！！！”  
+“是吗？真可惜。无论怎样，结果都是相同的。  
+ 你就乖乖在那边看着，珍视之人的记忆在这孩子体内继承下去吧。”  
+莱耶丝在篝的背后，操作起装置旁边的电脑。  
+铃羽依然冷静，之所以没有冲上去阻止莱耶丝，是因为还在等着桶子的一句话。  
+“桶子！还没好吗！？”  
+“抱歉，冈伦……还有一点，马上就好了啊——”  
+可恶！！我低声询问桶子，可惜没有得到期望的回答。听到这话，铃羽轻声但坚定地对我说：  
+“叔叔，视情况我会放弃篝。要是我动手了你就趴好。”  
+“唔……”  
+我知道，真到了那个关头，铃羽是不会有一丝犹豫的。  
+“好，准备完毕——”  
+怎么办？要放弃篝……吗？那种事，我……可是这样下去，无论如何篝都不会得救……  
+“那么，永别了，篝……”  
+莱耶丝纤细的手指伸向了电脑——  
+“唔……！”  
+铃羽行动了，连准备动作都没有，一瞬间就冲到了莱耶丝面前——只听一声枪响，冲向莱耶丝的铃羽好像被击中了，倒向地面。  
+“铃羽——！”  
+“我早就猜到你会这么做了，真是遗憾呢。”  
+早就被莱耶丝预判到了……！无计可施了吗？！  
+“住手！！”  
+我来不及制止，只能徒劳地大喊——莱耶丝已经按下了键盘。  
 
-“哈哈哈……有趣……”  
-“莱耶丝教授……不，莱耶丝！你这家伙，倒是相当有趣啊！”  
+…………  
+好像……没有什么动静……  
+“怎、怎么回事？为什么没反应！？不会吧……这个破烂！*God damn it!! Shit!!*”  
+莱耶丝破口大骂，一遍又一遍粗暴地敲打键盘。系统出现故障了吗！？  
+“冈伦……先生……”  
+“篝！？”  
+篝原本飘忽无神的双眸，现在逐渐散发出一丝光芒。  
+“*Bullshit!!*”  
+莱耶丝的注意力完全在机器上，机会就是现在。  
+“篝！过来！！”  
+“呜——冈伦先生！！”  
+被我的声音唤醒，篝扯掉了头上的装置，立刻站起来，小跑几步便向我摔过来。  
+“篝！！”  
+我跑上前，支撑住她的身体。  
+“唔——！！”  
+莱耶丝猛然架好枪——枪声随之响起。  
 “……”  
-“只是一瞬，铃羽瞥了我一眼。”  
-“虽然那眼神好像带着一点斥责，但她并没有说什么。”  
-“*Rintaro*……？”  
-“吾非伦太郎！”  
-“我现在的任务——就是在桶子解除锁定前拖延时间。”  
-“那么现在就演上一出吧。”  
-“竭尽全力地饰演一个丑角。”  
-“那才是我的使命。”  
-“吾名曰凤凰院凶真！颠世所控之构，堕沌之男！”  
-“……你这演的哪一出？”  
-“哈哈哈……就由我这个狂气的疯狂科学家，凤凰院凶真赐予你认可吧！你这家伙！相当的疯狂！”  
-“疯皇……什么？”  
-“凤凰院凶真！冈部伦太郎不过是个欺世假姿！其真身便是我！”  
-“如不死鸟般复苏的，疯狂科学家！”  
-“噗……哈哈哈，什么啊这是！你，真是 unique 呢！”  
-“一开始目瞪口呆的莱耶丝，马上恢复了游刃有余的笑容。”  
-“但是我不能在此胆怯。”  
-“莱耶丝……迄今为止你这家伙做过的事，我已详知——”  
-“你这家伙为了研究 AI 战士，作为教授潜入了维克多·孔多利亚大学。”  
-“而且在那途中，你加入了『Amadeus』的项目。”  
-“对吧？”  
-“嗯，如你所述。『Amadeus』真是个相当有趣的项目呢。但是，比那更有趣的是——”  
-“简直就像没把他们当作人一样，她踩着横倒在脚边的尸体。”  
-“在『Amadeus』项目的背后忽隐忽现的，他们的存在哦。”  
-“果然，我深入一探，发现了一个出乎意料的东西。”  
-“至于发现了什么，你也是知道的吧？”  
-“时间机器……是吧？”  
-“莱耶丝的露出妖艳的笑容点了点头。”  
-“原来如此啊……”  
-“作为人们的梦想，被公认绝对做不出来的时间机器。”  
-“你注意到记载着那个理论的论文了吗！”  
-“如果得手，世界的霸权也能纳入囊中！”  
-“哼，但是，太无聊了……你们这群家伙所考虑的事都如出一辙。”  
-“你说……无聊？”  
-“嗯，无聊透顶！”  
-“世界的霸权？为了国家为了组织为了机关……”  
-“全都是这么渺小的目的。”  
-“为了这种那个玩意儿而利用世纪性的大发明什么的，简直是科学家中的败类。”  
-“我在科学家之前是军人。”  
-“是为国捐躯的人。”  
-“如果我国将世界霸权纳入囊中，我们就会有相应的抑制力。”  
-“这不仅是为了这个世界，还是为了全人类啊！”  
-“她的声音因为兴奋变得越来越高。”  
-“所以绝不能让其他的国家抢先下手。”  
-“只要我们入手这革命性的理论，我们就能守住这个世界的平衡！就能维持住这个世界的和平！”  
-“如果被其他国家……更不用说民间企业得手什么的，我决不允许！”  
-“这就是你对这么多人出手的理由吗……”  
-“我再说一遍……”  
-“无聊透顶！”  
-“哎呀是吗。”  
-“我也觉得这样对他们不好。”  
-“她连怵都不打地说着。”  
-“我原本只是想让他们摸鱼摸个痛快，等到全部都得手之后，让他们交出数据而已呢。”  
-“那，为什么杀他们？”  
-“作为间谍潜进来的我一个部下捅了个篓子啊。”  
-“我也认为这一点是我们的失误哦。”  
-“但是……他们也又不好的地方啊。”  
-“DURPA 里也有民间研究者的哦。”  
-“我们都提出给他们留出位置，谁让他们非要得寸进尺地摆出那么多要求呢。”  
-“虽然我也不想失去有识之士。”  
-“莱耶丝微微勾起唇角说道。”  
-“那表情根本不像真是这么想的。”  
-“那么，我有一个提案。*Okabe·Rintaro*……你，要不要来我们 DURPA？”  
-“什么……？”  
-“哎呀，这个表情真出乎我意料。你以为我是为了什么才特意跟你说这些啊。”  
-“作为冥土的礼物……什么的，这种事只会发生在日本的 SAMURAI CINEMA（武士剧）吧。”  
-“……”  
-“不用担心。我们也不论国籍什么的，如果你想要的话，就算是绿卡也能给你准备好。”  
-“也就是说，你承认我……我凤凰院凶真的才能了吗……”  
-“当然。我才不会向没有才能的人搭话呢。”  
-“你有才能。”  
-“而且，还是 *Makise·Kurisu* 的朋友。”  
-“看来她看中我的真正的原因是后者呢。”  
-“太显而易见了。”  
-“我有可能从牧濑红莉栖那听到了些关于时间机器理论的事……”  
-“你是这么期待的吧。”  
-“所以你才说想要了我。”  
-“派得上用场的人就要拉拢，也要付出相应的回报。这就是我们所生活的世界的准则嘛。”  
-“也就是说，一旦我失去了用处，我也会落得跟那些倒着的人相似的下场吧。”  
-“那就要鉴于你的勤奋和作风了嘛……”  
-“莱耶丝开心地笑着，慢慢地绕到篝的身后。”  
-“乍一看是个很普通的动作，但我看到铃羽一动不动，大概是这个动作一点破绽都没有吧。”  
+我还以为会被击中，然而事实却不是。莱耶丝手中枪被弹飞了，正在地上嘎啦嘎啦地滚动着。  
+“不许动……”  
+铃羽缓缓站直身体，手中握着刚才放在地上的枪。  
+“铃羽！你没事吗？！”  
+“勉强吧。”  
+铃羽的肩部染上了鲜血，但似乎并非致命伤。在那样近的距离被枪击，竟然没事……  
+“形势逆转了呢。”  
+“哼……呵呵……真是服了，没想到竟然被你这样的孩子扳倒了……”  
+莱耶丝投降似的耸了耸肩。  
+“但是……事情不会就此结束的。”  
+“我说过别动！”  
+但是，莱耶丝并没有理会铃羽的制止，她伸出手，抓住了刚刚还套在篝头上的奇怪装置。  
+“随便一提，我的口袋里有小型炸弹哦。  
+ 只要臼齿咬合一丁点，就会起爆哦。  
+ 这么近的距离，你们三个也会被卷进去呢。”  
+“你想自爆吗？”  
+“比起向敌人透露情报，还不如选择一死，我是被这样教育的……真可悲呢。”  
+“虚张声势。”  
+“你这么想的话，那就开枪吧。”  
+铃羽的手指准备发力，我小声劝阻她：  
+“等等，铃羽！现在就相信桶子吧。”  
+“唔……！”  
 
-（桶子……还没好吗……？）  
-“我差不多快拖到极限了。”  
-“嘛，你慢慢考虑……”  
-“哼哼……哼哼哼……”  
-“……？”  
-“哼——哈哈哈哈！”  
-“竟然能看中我的才能，看来你有着不错的 Highest Eye 啊！”  
-“*Highest Eye*……？”  
-“眼光好的意思！没想到你身为一介美利坚人竟然连这个都不明白！”  
-“但是算了。刚刚我说你是科学家中的败类，我就收回这句话吧。”  
-“毕竟，你看出了我的才能呢。”  
-“哎呀。这么说，你是要答应我的提案了吗？”  
-“我拒绝！”  
-“什……”  
-“因为我，是凤凰院凶真啊！”  
-“狂气的疯狂科学家，必须是一个孤高的存在。”  
-“无论何时都不附属于任何事物。这便是宿命……”  
-“……”  
-“虽然莱耶丝一脸惊讶地看着我，但最后只是大叹了一口气。”  
-“算了，没必要现在就得出结论。”  
-“处理完她的事之前，我可以让你慢慢考虑……”  
+莱耶丝瞥了铃羽一眼，自顾自慢慢地把头套戴到自己头上。  
+“你……想干什么……？”  
+“对『Amadeus』来说，不是她也没关系的吧。”  
+“难道……！”  
+“我说过了吧？不会就此结束……！”  
+她眼镜下的双瞳充斥着狂气。  
+“是啊，多么简单的事，不用特地使用别人，一开始就这样不就好了嘛……”  
+“……！”  
+“这样，我就能得到 *Makise·Kurisu* 的记忆了！  
+ 时间机器理论也就到手了！  
+ 我就能成为为世界带来革新的存在了！”  
+“住手……那种事……！”  
+别用红莉栖的记忆做那种事……!  
+“喔！来了来了来了！”  
+“桶子！？”  
+“啊哈哈哈哈哈！我即将成为能够支配时间的存在了！”  
+“桶子！快把文件删掉！”  
+“稍等！正在找！”  
+莱耶丝向键盘伸出手。  
+“住手！！！”  
+“没事的，放心吧，你最珍视的女人的记忆，就由我来好好实现其价值……”  
+“有了！找到了，冈伦！”  
+“删掉！桶子！拜托了！把红莉栖——把她解放出来！！”  
+“*Okey-dokey!*”  
+“*Come into me, Kurisu.*”  
+莱耶丝用手指按下了键盘。  
+
+…………  
+鸦雀无声，什么都没发生。没有像发动电话微波炉（暂定）那样发光，也没有发出轰鸣。这是当然的，因为一切都是在她脑内发生的。  
+“怎、怎么样了……?。”  
+莱耶丝，保持着按下键盘的姿势，纹丝不动。记忆被植入了吗？我下定决心要去查看她的情况，就在迈出第一步的时候，莱耶丝虚脱了一般，跪倒在地。我透过光线看到了她的脸，只看到一片虚无。既没有光，也没有暗，什么都没有，她的双瞳中只剩下空洞。只有，按下键盘的那一瞬间的恍惚，仍留在她的脸上。  
+“冈伦先生……那个人……”  
+“就差一点……桶子那边……抢先了一步……”  
+比下载记忆抢先一步，文件夹被清空了。下载进她的脑中的，是一片空白。迄今为止的记忆也是，自己的历史也是，野心也是，都被空白覆盖了。只剩空无一物的躯壳，仿佛在向神灵祈祷一样，跪在那里。  
+“冈伦？”  
+“……桶子，干得漂亮……全部……结束了。”  
+我如此回答，耳机另一头传来了桶子和真帆的欢呼。  
+“……走吧，叔叔，此地不宜久留。”  
+“……是呢。篝，走得动吗？”  
+“嗯……”  
+留在这里的，只有瘫倒的尸体和活生生的空骸。  
+
+『Amadeus』——活在盒子里的她，已经不在了，已经从这个世界上被消除掉了，和我珍视之人的记忆一起。我向已然消失的那个人轻语道：  
+“再会，红莉栖……”  
 
 
 <br/>
@@ -167,4 +156,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0129) | [menu](../) | [next→](./0131) |
+| [←prev](./0135) | [menu](../) | [next→](./0137) |
