--- a/article/sg0/doc/0098.md
+++ b/article/sg0/doc/0098.md
@@ -21,7 +21,7 @@
 “嘛，多注意吧。”  
 “感激不尽。”  
 “好啦好啦，我知道啦，别这样畏首畏脚的，搞得我很不习惯。”  
-尽管如此我还是向天王寺深深地鞠躬道谢，然后走出了显像管工房。现在得到了天王寺的帮助。此前，上午的时候还得到了另一个人的帮助——桐生萌郁。和天王寺相比，算是比较简单了。我昨天向桶子确认过，和之前的世界线一样，这个世界线中也向萌郁委托了搜索篝。接着，只要委托她调查篝来这条街之前做过什么就可以了。这样一来，现在的我所能做的，以防万一的对策全都做了，剩下的就是祈祷什么都不要发生。  
+尽管如此我还是向天王寺深深地鞠躬道谢，然后走出了显像管工房。现在得到了天王寺的帮助。此前，上午的时候还得到了另一个人的帮助——桐生萌郁。和天王寺相比，算是比较简单了。我昨天向桶子确认过，和之前的世界线一样，这条世界线中也向萌郁委托了搜索篝。接着，只要委托她调查篝来这条街之前做过什么就可以了。这样一来，现在的我所能做的，以防万一的对策全都做了，剩下的就是祈祷什么都不要发生。  
 
 回到 LAB，琉华子来了，表情看起来很严肃，说是有话要和我说。  
 “……其实，有件在意的事情，和篝记忆相关。”  
