--- a/article/sg0/doc/0103.md
+++ b/article/sg0/doc/0103.md
@@ -102,7 +102,7 @@
 “啊。你对这周围还不是很熟悉吧？”  
 “可以吗？”  
 “当然了。”  
-虽然鉴于前一个世界线的事件，应该要避免不必要的外出，但是让现在的她稍微散散心也许会比较好。现在还是白天，选人多的路走应该就没问题了吧。  
+虽然鉴于前一条世界线的事件，应该要避免不必要的外出，但是让现在的她稍微散散心也许会比较好。现在还是白天，选人多的路走应该就没问题了吧。  
 “太好啦！其实呢，我也有好多东西想买呢。”  
 “……有想要的东西？”  
 “嗯。日用品什么的，好多好多。”  
