--- a/article/sg0/doc/0137.md
+++ b/article/sg0/doc/0137.md
@@ -1,204 +1,101 @@
 # 盟誓的文艺复兴 - 15
 > 1.055821  
-> [ 2011/02/02 ] 莱耶丝准备洗脑，把自己“洗白”了。
+> [ 2011/02/06 ] 凶真给众人分发完全版 LABMem 徽章，决定脚踏实地，把过去和可以认为是过去的未来连接起来。
 
-| [←prev](./0131) | [menu](../) | [next→](./0133) |
+| [←prev](./0136) | [menu](../) | [next→](./0138) |
 
 ---
 
-“你想对篝做什么。”  
-“虽然铃羽处在双手背在头后的状态，但是她紧盯着莱耶丝，以只凭眼神就能杀人的气势。”  
-“你心知肚明吧。我要把她脑中的记忆替换成 *Makise·Kurisu* 的。”  
-“那就是说……”  
-“这样的话，那个世界线上的篝说不定不是被 STRATFO 而是被这群家伙……”  
-“不只是这样。”  
-“那时袭击了 LAB 的穿着骑手服的女人，该不会是——”  
-“你不用摆出那种表情哦。毕竟为了这个，我们已经用动物和不知道多少人反复试验过了。”  
-“莱耶丝爱抚着篝的脸颊。”  
-“说起来，之前这系统有过致命性的缺陷。”  
-“但是，这回已经解除了那个问题。在此之上，她也具备着极高的适应力。一定会成功的……”  
-“一字一字。”  
-“缓慢的语调。”  
-“仿佛迷醉在这话语之中。”  
-“红莉栖的记忆……头脑……将会在这孩子的身上重现。”  
-“这样的话，记忆的黑箱也将不复存在。”  
-“她一定会对我们言听计从，把有关于时间机器的事全~部告诉我们。”  
-“已经不需要红莉栖的笔记本电脑和移动硬盘了。只要有她就可以了……”  
-“莱耶丝将红润的双唇伸向篝。”  
-“呐，*Kagari*……你也想成为 *Kurisu* 吧？”  
-“别！篝！别听那家伙的话！”  
-“……”  
-“但是，篝一动不动。”  
-“被称作天才的那个头脑，将会为你所有。”  
-“你将会成为掀起世界革新的存在……你不觉得这是一桩美事吗？”  
-“答复呢？”  
-“篝的双唇微微颤动。”  
-“是……的……”  
-“呵呵……乖孩子……”  
-“篝……”  
-“*Rintaro*，这也是你的选择哦。”  
-“如果乖乖答应这边的交换条件，结局可就会不同了呢。”  
-“而且……实际上，你不也是想与红莉栖重逢吗？”  
-“我……”  
-“构成一个人的是他的记忆。是记忆创造出的他……”  
-“……”  
-“拥有红莉栖的记忆的篝，会变成红莉栖本人哦。这样的话，你也会很高兴吧？”  
-“我——”  
-“……唔！”  
-“而且红莉栖也.....。”  
-“开什么玩笑！！！”  
-“这一声大得连自己都大吃一惊。”  
-“红莉栖会高兴？胡说八道！！”  
-“就算篝的记忆被替换成红莉栖的，那也不是红莉栖。”  
-“自己的记忆为这种目的所利用，她决不会高兴的！”  
-“不要……不要小瞧牧濑红莉栖啊！！！”  
-“……”  
-“是吗。真可惜。”  
-“无论怎样，结果都是相同的。”  
-“你就乖乖从那看着珍贵的人的记忆在这孩子体内继承下去吧。”  
-“莱耶丝在篝的背后，操作起旁边的电脑。”  
-“铃羽冷静依然。”  
-“之所以没有飞奔出去阻止莱耶丝，是因为还在等着桶子的一句话。”  
-“桶子！还没好吗！？”  
-“抱歉，冈伦……还有一点，马上就好了啊——”  
-“可恶！！”  
-“叔叔，视情况我会放弃篝，要是我动手了你就趴好。”  
-铃羽轻声对我说。  
-“……唔。”  
-“铃羽的话，应该不会有一丝犹豫吧。”  
-“好，准备完毕——”  
-“怎么办？”  
-“应该放弃她……吗？”  
-“那种事，我……”  
-“但是这样下去，无论如何篝都不会得救……”  
-“那么，永别了，篝……”  
-“莱耶丝那支纤细的手指一伸——”  
-“……唔。”  
-“铃羽行动了。”  
-“连准备的动作都没有，只是在一瞬就冲到了莱耶丝面前。”  
-“枪声轰鸣。”  
-“奔向莱耶丝的铃羽，就像被弹飞了一样倒向地面。”  
-“铃羽——！”  
-“我早就猜到你会这么干了。真是遗憾呢。”  
-“早就被莱耶丝预判到了……！”  
-“无计可施吗！”  
-“住手！”  
-“抢先于我的制止，莱耶丝——”  
-“敲下了键盘。”  
-“……吓！”  
-“……”  
-“怎么……了？”  
-“……？”  
-“怎，怎么回事！？为什么没反应！？”  
-“不会吧……这个破烂！”  
-“*God damn it!! Shit!!*”  
-“莱耶丝破口大骂，一遍又一遍粗暴地叩打键盘。”  
-“系统出现故障了吗！？”  
-“冈伦…………先生。”  
-“篝！？”  
-“篝的双眸之前还是那样飘忽，现在逐渐散发出了一些光芒。”  
-“*Bullshit!!*”  
-“莱耶丝的注意力完全被引开，机会就是现在。”  
-“篝！过来！！”  
-“呜——冈伦！！”  
-“被我的声音唤醒的篝拿掉了头上的装置，立刻站起来，小跑几步便向前摔去。”  
-“篝！！”  
-“我奔过去，支撑住了她的身体。”  
-“唔——！！”  
-“莱耶丝猛然架好枪。”  
-“枪声随之而起。”  
-“……”  
-“我还以为被射中了，但事实却不是。”  
-“从莱耶丝手中弹飞的枪，正在地板上嘎啦嘎啦地转着。”  
-“别动……”  
-“铃羽缓缓直立身板。”  
-“她的手中，是刚才掉在地板上的枪。”  
-“铃羽！你没事吗！”  
-“勉强是吧。”  
-“虽然铃羽的肩部染上了鲜血，但似乎并不是致命伤。”  
-“在那样近距离的枪击下，竟然没有事……”  
-“形势逆转了呢。”  
-“哼……”  
-“……？”  
-“哈哈哈……真是服了。没想到竟然被你这样的孩子扳倒了……”  
-“莱耶丝投降似的耸了耸肩。”  
-“但是……事情不会就此结束的。”  
-“我说过别动！”  
-“但是，莱耶丝并没有被铃羽的制止声吓到，她伸出手，抓住了刚刚还套在篝头上的奇怪头套。”  
-“铃羽更紧地握住了手枪。”  
-“随口一提，我的口袋里有小型炸弹哦。”  
-“只要臼齿咬合一丁点，就会起爆哦。”  
-“这种超近距离的话，你们三个也会被卷进去呢。”  
-“你想自爆吗？”  
-“比起向敌人透露情报，还不如选择一死，我是被这样教育的。真可悲呢。”  
-“虚张声势。”  
-“你这么想的话，开枪就好。”  
-“铃羽向手指施加力量。”  
-“等等，铃羽！”  
-“……”  
-“现在要相信桶子。”  
-“唔……！”  
-“莱耶丝瞥过铃羽，慢慢把那头套戴到了自己头上。”  
-“你……想干什么……？”  
-“对『Amadeus』你来说，不是她也没关系对吧。”  
-“难道……！”  
-“我说过了吧？不会就此结束……”  
-“眼镜内侧的双瞳充斥着狂气。”  
-“是啊。多么简单的事。不用特地使用别人，一开始就这样不就好了嘛……”  
-“……！”  
-“这样，我就能得到 Makise·Kurisu 的记忆了！”  
-“时间机器理论也就到手了！”  
-“我就能成为为世界带来革新的存在了！”  
-“住手……那种事……！”  
-“别用红莉栖的记忆做这种事……!。”  
-“喔！来了来了来了！”  
-“桶子！？”  
-“啊哈哈哈哈哈！从现在起我就要变成能够支配时间的存在了！”  
-“桶子！快把文件删掉！”  
-“稍等！正在找！”  
-莱耶丝向键盘伸出手。  
-“住手！！！”  
-“没事的，放心吧，你最珍贵的女人的记忆，就由我来好好应用给你……”  
-“有了！找到了，冈伦！”  
-“删掉！桶子！拜托了！把红莉栖——！把她解放出来！！”  
-“*Okey-dokey!*”  
-“*Come into me, Kurisu.*”  
-“莱耶丝用手指轻触键盘。”  
-
-………………  
-鸦雀无声，什么都没发生。没有像电话微波炉（暂定）那样发光，也没有发出轰鸣。这是当然的，因为一切都是在她脑内发生的。  
-“怎、怎么样了……?。”  
-“莱耶丝——”  
-“……”  
-“保持着触碰键盘的姿势，纹丝不动。”  
-“记忆被植入了吗？”  
-“我下定决心要去看看她的样子，就在迈出第一步的时候——”  
-“莱耶丝虚脱了一般，跪倒在那。”  
-“我终于透过光看到了那张脸。”  
-“在那上面的是——虚无。”  
-“既没有光，也没有暗。”  
-“什么都没有。”  
-“一副虚无空洞的双瞳。”  
-“只是，在那一瞬间——在按下键盘的一瞬时恍惚的表情，仍留在她的脸颊。”  
-“冈伦……那个人……”  
-“只是一瞬……桶子那边抢先了一步……”  
-“比下载记忆抢先一步，文件夹被清空了。”  
-“下载了空白记忆的她的脑海，已经空无一物。”  
-“迄今为止的记忆也是。”  
-“自己的历史也是。”  
-“野心也是。”  
-“剩下的只是空壳。”  
-“只剩空无一物的躯壳，仿佛在向神灵祈祷一样，跪在那里。”  
-“冈伦？”  
-“……桶子，干得漂亮……”  
-“结束了，全部……”  
-“我如此回答，耳机的另一头传来桶子和真帆的欢声。”  
-“……走吧，叔叔，此地不宜久留。”  
-“……是呢。篝，走得动吗？”  
+周日上午，真由理的 cosplay 伙伴们，吹雪、枫、由季来 LAB 玩，现在要离开了。  
+“那，真由喜，我们还会再来的。”  
+“嗯，再会\~”  
+“下次琉华君也一起 cosplay 吧。”  
+“啊，这个……那个……我会考虑的。”  
+“冈伦先生还有大家，打扰你们了。”  
+“嗯，随时可以再来。”  
 “嗯……”  
-留在这里的是，瘫倒着的尸体和活生生的空骸。  
+“怎、怎么了？”  
+“冈伦，总觉得你的气场变了呢。”  
+“是……吗？”  
+“嗯，总觉得比以前好相处多了。”  
+“真是的，吹雪，当面说很失礼哦。”  
+“诶？枫刚刚不也是这么说的嘛。”  
+“等、等等！”  
+“诶嘿嘿\~。”  
+“真是的……”  
+吹雪一如既往的不见外。她说的对，终于下定决心振作起来的我，回看之前的我，也觉得看不下去。  
+“啊，那么，我也该告辞了。”  
+“啊，今天也打工？”  
+“是，结束后再联络，定一下周末的要做的事吧。”  
+“OK，那我等着你的联络哦。”  
+“什么什么，发生什么了喵？桶子喵和由季喵之间的气氛真好喵！”  
+“是、是吗？啊，但是我对菲莉丝碳的爱意也分毫不减哦。”  
+“真是的，爸爸，你又这样！”  
 
-『Amadeus』——显示屏对面的她，已经不在了，已经从这个世界上被消除掉了，和我珍贵的人的记忆一起。我向着现在已然消失的那个人轻语：“再会，红莉栖……”  
+围绕牧濑红莉栖的记忆和『Amadeus』的骚动全部平息，平和的日常生活又回到了我的身边。发生在东京电机大学地下室的事，迄今为止还没有任何报道。事后第二天再去学校，地下室已经被封锁了，说是某个实验失败引起了事故，恐怕是被军队或是 STRATFO 处理掉了吧。那件事过后，我的周围暂时还没有不协调的气氛。那个地方应该没有留下任何与我们有关的痕迹，大概事情也不会波及到我们吧。  
+“话说回来，那个到底是怎么回事啊。”  
+“你说哪个？”  
+“那女人在给篝下载记忆的时候，不是很顺利啊。”  
+“只是系统没有好好运行而已吧？”  
+“桶子喵说得对喵，铃喵没必要想那么多喵。”  
+“嗯——真是这样吗？总觉得很在意……”  
+看起来一直在深思着什么的篝开口道：  
+“话说，那时——没什么，但是……”  
+“喂喂，篝，不要话说到一半就停啊，很让人在意的。”  
+“那时，我感觉听到了什么声音。”  
+“声音？”  
+“嗯，在脑海深处，也不知道是谁在喊‘不行——！’。  
+ 那时的事我几乎都不记得了，所以可能只是梦或者是别的什么……”  
+“会不会是『Amadeus』？说不定“红莉栖”在最后关头，拒绝了自己的记忆被写入篝的脑中……”  
+“这真不像是以真帆的逻辑能得到的意见啊。”
+不过，听了真帆的话，琉华子和真由理看向了对方。  
+“那个……在我们最后一次连接『Amadeus』的时候，通话中途就被切断了。”  
+“明明冈伦的 bot 还在说话，但她不知怎么的，好像很慌张的样子，就中断了连接。”  
+难道，就是那个时候……  
+“不过，这种事可能吗？”  
+“不知道，不过，『Amadeus』应该也和人类一样，有自我防卫的本能吧。  
+ 所以，发现自己的记忆要被用到不好的事情上……也不是不可能。”  
+虽然不是现在这条世界线，红莉栖的记忆也曾在篝的脑中存在过。说不定在这里，“红莉栖”一直防备着自己被再一次利用，从而波及到篝。可能另有真正的原因，但至少我想要这么认为。  
+“呐，冈伦，其实我也有一件不明白的事。”  
+“什么？”  
+“按你的说法，至今为止因为『Amadeus』，引发了数次世界线变动吧？  
+ 可是，我们还记得那时的事，就意味着这次没有发生变动吧？这是为什么？”  
+这也是我在事后马上考虑的问题。  
+“啊，关于这个，我推测，至今为止的世界线变动的原因，可以认为是  
+ **根据我们对『Amadeus』采取的行动，让红莉栖的记忆落入了谁的手中**。”  
+不管是谁得到了『Amadeus』，都不可能不利用她来改变过去吧。  
+“但这次，作为原因的『Amadeus』和红莉栖的记忆本身都被删除了。  
+ 原因被消除了，相应的世界线变动也就不会发生了……大概是这样。”  
+STRATFO 和 DURPA 争端的火种被消除了，红莉栖留下的数据也被破坏了。红莉栖的记忆这份遗产，以此为媒介连接的未来都不复存在了。但是，现在铃羽和篝还在我的眼前。她们两个还在这里，就意味着未来还没有被改变。这当然也是早就明白的——世界线的收束，在抵达命运石之门之前，都没法避免。即使如此，**这次的事件肯定不是无用的**。在那个时候——2036 年的世界察觉到的微小的灵感。**这个世界，应该就是为了连接到那里所做的准备**。  
+“那么，接下来要怎么办？”  
+“是啊，虽然有很多事要做，不过在那之前——”  
+我从白衣的口袋里掏出了准备好的东西。  
+“我有礼物要送给大家。”  
+“这是……？”  
+
+![](../static/image/0137-1.png)
+
+“LABMem 徽章——我们全员作为 LAB 成员的证明。”  
+OSHMKUFAHSA——徽章上，刻着所有成员名字的首字母。当然，红莉栖和萌郁的名字也在上面，并新追加了比屋定真帆（*Hiyajo Maho*）、椎名篝（*Shiina Kagari*）、还有阿万音由季（*Amane Yuki*）的名字。**把过去和可以认为是过去的未来连接起来**，这就是现在的我应该做的事。  
+“LABMem……我的宝物，又多了一个。”  
+篝很开心地把徽章抱在胸前。”  
+今后我们要走的道路，大概会是更加艰辛的荆棘之路，但光明肯定会存在。  
+“我，好像有点明白，红莉栖和冈伦先生关系这么好的理由了……”  
+“我也是，终于知道为什么爸爸他们这么依靠冈伦叔叔了……”  
+“我也知道妈妈为什么一直喜欢冈伦先生了……”  
+“篝、篝酱，不是的，真由喜只是冈伦的人质，所以那种事……”  
+“等、这、什么？只有冈伦这么受欢迎，不可原谅！现充爆炸吧！”  
+“爸爸你已经有妈妈了吧！”  
+
+无数的未来和无数的过去，都一定会在收束的地方相遇。所以——  
+“啊，是我……  
+ 什么？你问什么时候来救你？别急，现在还没到那个时候。  
+ 哼哼哼……你以为我是谁？听好了，狂气的疯狂科学家，凤凰院凶真决不会食言。  
+ 所以，你暂且等着就好。  
+ 总有一天，我会解开束缚着你的时间的诅咒，把你拯救出来。  
+ 啊……绝对……”  
+红莉栖，到再见之时，我会把我所有的思念都奉献给你。  
+“*El·Psy·Congroo!*” 
 
 
 <br/>
@@ -206,4 +103,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0129) | [menu](../) | [next→](./0131) |
+| [←prev](./0136) | [menu](../) | [next→](./0138) |
