--- a/article/sg0/doc/0011.md
+++ b/article/sg0/doc/0011.md
@@ -159,7 +159,7 @@
  桶子君呢，那个呢，对于由季可是萌得很呢！  
  一定是这样的，真由喜保证！  
  夏季 CM 第一次见面的时候，就是这样的感觉不是嘛？”  
-由季和真由理的相识是在四个月前的夏季 CM。吹雪和枫穿着真由理制作的 cos 服参加活动，在会场，一个人参加的由季被枫发现并且会合。在之后大家一起举行的庆功宴上，作为真由理的朋友的桶子也在。吹雪可是清楚地见证了，由季和桶子融洽交谈的样子。在那之后，由季和真由理、桶子成为了朋友，而她也会偶尔去两人所属的社团——LAB，未来机械研究所。也就是说从夏季 CM 以来，由季和桶子一直都保持着来往。尽管这样，由季还是苦笑着摇着头。  
+由季和真由理的相识是在四个月前的夏季 CM。吹雪和枫穿着真由理制作的 cos 服参加活动，在会场，一个人参加的由季被枫发现并且会合。在之后大家一起举行的庆功宴上，作为真由理的朋友的桶子也在。吹雪可是清楚地见证了，由季和桶子融洽交谈的样子。在那之后，由季和真由理、桶子成为了朋友，而她也会偶尔去两人所属的社团——LAB，未来装置研究所。也就是说从夏季 CM 以来，由季和桶子一直都保持着来往。尽管这样，由季还是苦笑着摇着头。  
 “不，只要看看就知道了。总是感觉不止为何在被避开。  
  所以圣诞派对，我也考虑我是不是不去会比较好。”  
 真由理：“啊……呜……”    
