--- a/article/sg0/doc/0012.md
+++ b/article/sg0/doc/0012.md
@@ -43,7 +43,7 @@
 “可是啊……工作且不说，研究时间机器可是超费事的，需要治愈啊我。”  
 “你总是找种种借口开小差，你太天真了，爸爸！”  
 在战事不断的未来，这样的父亲居然能活下来，这让铃羽反而感到佩服。话虽如此，“开发时间机器”这件事关系到铃羽自身在未来和现在的处境，所以她没法轻易让父亲罢手。  
-桥田至在冈部伦太郎不再跨入这间未来机械研究所之后，仍然独自进行着时间机器的研发工作。铃羽对他的工作一概保持沉默。因为一旦插嘴，就难免会产生时间悖论。  
+桥田至在冈部伦太郎不再跨入这间未来装置研究所之后，仍然独自进行着时间机器的研发工作。铃羽对他的工作一概保持沉默。因为一旦插嘴，就难免会产生时间悖论。  
 “就算为了制造时间机器，也不能调查未来的时间机器，明白了吗？”  
 铃羽再次警告父亲。  
 “我知道那些。可我有时会没自信。我当真能够做出时间机器吗？”  
@@ -167,7 +167,7 @@
 看起来由季应该是没有发现的样子，在房间里开始了打扫。确实在早上的时候，房间里就已经比较乱了，以由季的性格这时候忍不住要打扫对于铃羽来说是很容易猜到的。  
 桶子把地板上放着的那个像是吸尘器一样的东西拿到以后走出了开发室。  
 “是什么啊，那个？”  
-“未来机械 5 号机——  
+“未来装置 5 号机——  
  分解开的话，应该是可以当作普通吸尘器来用的。”  
 “明明是为了打扫用的吸尘器，要是还需要分解开的话，不会反而让房间变得更乱吗？”  
 “啊呜……”  
