--- a/article/sg0/doc/0032.md
+++ b/article/sg0/doc/0032.md
@@ -23,7 +23,7 @@
  我相信这一点哦。”  
 “……？”  
 桶子有感触地说出了如此认真的话，让铃羽有点吃惊。平时的他只愿意说些玩笑话，很少这么认真。  
-“未来机械研究所，正是因为有冈伦才会存在的。  
+“未来装置研究所，正是因为有冈伦才会存在的。  
  现在虽然有些自暴自弃，但一定能重新站起来的。  
  同时，凤凰院凶真也会复活。  
  ‘不死鸟这个名字可不是虚有其表的’什么的，‘厨二乙’什么的，  
