--- a/article/sg0/doc/0094.md
+++ b/article/sg0/doc/0094.md
@@ -20,7 +20,7 @@
 ………………  
 逐渐从黑暗的底部浮上来的感觉。朦胧的意识一点点地清晰。  
 “这里……是……？”  
-我以缓慢的动作观察着周围。没有错，这里是未来机械研究所——到刚才为止我一直呆的地方。四周一切如常，只是——大家的身影都消失了。到刚才为止大家都还在四周，可现在室内空无一人。我确认了时间。刚才和比屋定通话结束，大概是下午 3 点左右。在那之后只经过了几分钟。就算我突然失去了意识，仅仅这么短的时间，所有人就从这里消失也不太可能……  
+我以缓慢的动作观察着周围。没有错，这里是未来装置研究所——到刚才为止我一直呆的地方。四周一切如常，只是——大家的身影都消失了。到刚才为止大家都还在四周，可现在室内空无一人。我确认了时间。刚才和比屋定通话结束，大概是下午 3 点左右。在那之后只经过了几分钟。就算我突然失去了意识，仅仅这么短的时间，所有人就从这里消失也不太可能……  
 我慢慢地在室内来回走动，另外发现了一些奇怪的地方。桶子一直用的电脑，键盘上积着薄薄一层灰，就像是有一段时间没有人使用了一样。然后还有房间的角落，如果是平常的话，真由理的纸袋会放在那里，装着做好的 cos 服之类的。到刚才为止那里确实放着纸袋的，不知什么时候也不见了。难道是……  
 “世界线……又变了……？”  
 但是，为什么？说起来……刚才“红莉栖”的话——为什么“红莉栖”会让我救她？和世界线变动有关系吗？为了确定这一点，我从口袋里拿出手机想要打开『Amadeus』——但手指停住了。  
@@ -116,7 +116,7 @@
 即使如此，屋内还是保持着整洁。仔细看了一下，除了桶子的电脑之类的积了不少灰尘之外，其他地方都有在定期打扫。  
 “红莉栖……你常来这里吗？”  
 “时不时呢。不然的话，会很寂寞的。”  
-谁会寂寞？即使没说出来，我也明白的。真由理很喜欢这里，这个未来机械研究所。她超喜欢和 LABMem 的大家一起度过的时光。  
+谁会寂寞？即使没说出来，我也明白的。真由理很喜欢这里，这个未来装置研究所。她超喜欢和 LABMem 的大家一起度过的时光。  
 “对不起……”  
 “为什么要道歉？”  
 “因为……”  
