--- a/article/sg0/doc/0114.md
+++ b/article/sg0/doc/0114.md
@@ -23,7 +23,7 @@
 “嗯\~是那种让哭泣的人找回笑容的歌吧。”  
 “让哭泣的人找回笑容，很重要吗？”  
 “这也很重要，不过不只是因为这个呢。  
- 因为这首歌，把妈妈和篝酱联系在了一起。  
+ 因为这首歌，把妈妈和篝酱连接在了一起。  
  因为这首歌，我们才能相遇。”  
 “没有这首歌的话，妈妈就可能不是篝的妈妈了吗？  
  我不要那样……”  
