--- a/article/sg0/doc/0127.md
+++ b/article/sg0/doc/0127.md
@@ -89,7 +89,7 @@
 “毕竟我一直都在维护呐。”  
 “真不愧是你啊。”  
 “还好啦。”  
-电话微波炉（暂定）和 VR 耳机，和我在 LAB 里见到的多少有点不同，但毫无疑问，是我们的未来机械……  
+电话微波炉（暂定）和 VR 耳机，和我在 LAB 里见到的多少有点不同，但毫无疑问，是我们的未来装置……  
 “啊但是，不和真由姐她们说一声没关系吗？”  
 “……现在不进行跳跃的话，决心就要减弱了。  
  而且，就算现在不见，总还会见到的，在过去的世界里……”  
