--- a/article/sg0/doc/0008.md
+++ b/article/sg0/doc/0008.md
@@ -77,7 +77,7 @@
 啊，啊啊——原来如此……  
 比屋定真帆的这个态度，和我了解的红莉栖可能会说的话考虑了一下，答案只有一个。  
 “这个 sweets（笑）……”  
-喃喃自语的说着曾经经常对红莉栖所使用的网络用语，心情一下变得轻松了起来。大概，是对比屋定真帆说了“不是挺相配的吗？”或者“学姐的春天也终于来到了呢\~”，这样无聊的话，一定没错。要是有男女彼此间进行着哪怕是一点亲密的谈话，不管怎么样都会当作是在交往。这就是勇往直前贯彻 sweets（笑）之道的红莉栖。这系统是有多不得了啊，连这种地方都和本人一模一样真的合适吗？我不由得苦笑。莫非这家伙背着比屋定真帆和雷斯吉宁教授，偶尔偷偷地登录着 @ch 呢？不，这家伙的话可能连发帖都有在干吧！就像曾经的红莉栖，用未来机械研究所的公用电脑，估算着没有人的时候悄悄的浏览 @ch 那样。  
+喃喃自语的说着曾经经常对红莉栖所使用的网络用语，心情一下变得轻松了起来。大概，是对比屋定真帆说了“不是挺相配的吗？”或者“学姐的春天也终于来到了呢\~”，这样无聊的话，一定没错。要是有男女彼此间进行着哪怕是一点亲密的谈话，不管怎么样都会当作是在交往。这就是勇往直前贯彻 sweets（笑）之道的红莉栖。这系统是有多不得了啊，连这种地方都和本人一模一样真的合适吗？我不由得苦笑。莫非这家伙背着比屋定真帆和雷斯吉宁教授，偶尔偷偷地登录着 @ch 呢？不，这家伙的话可能连发帖都有在干吧！就像曾经的红莉栖，用未来装置研究所的公用电脑，估算着没有人的时候悄悄的浏览 @ch 那样。  
 
 “喂，喂！进来的时候好歹敲个门啊！”  
 “克里斯蒂娜！你放着该干的事情不做到底在看什么啊？”  
