--- a/article/sg0/doc/0120.md
+++ b/article/sg0/doc/0120.md
@@ -67,8 +67,8 @@
 ![](../static/image/0120-2.png)
 
 就这样，我，椎名篝恢复了全部记忆。  
-接下来的几个月里，只觉得好开心。每天都习惯在 LAB 集合，和妈妈还有朋友们一起玩。大家都是很好的人，每分每秒都过得很充实。特别是妈妈，会尽可能抽出时间陪着我。一起吃饭，一起逛街，一起漫无目地散步。这些微不足道的日常琐事，正是我从心底一直追求的。以前一直在脑海中回荡的“声音”，也在和妈妈不断的聊天中，不知不觉消失了。妈妈不论什么时候，都对我展露着笑容，而且，满心欢喜地听着我说话。真的，真的，好幸福。也办过好几次过夜聚会，在 LAB，在妈妈家，在琉华君家。我们一边吃点心一边聊天到深夜，晚上和妈妈睡在同一床被子里。在被窝里，两个人小声地唱着那首歌，那首妈妈说的“把两人联系在一起”的歌。  
-的确，那首歌把我和妈妈联系在了一起。  
+接下来的几个月里，只觉得好开心。每天都习惯在 LAB 集合，和妈妈还有朋友们一起玩。大家都是很好的人，每分每秒都过得很充实。特别是妈妈，会尽可能抽出时间陪着我。一起吃饭，一起逛街，一起漫无目地散步。这些微不足道的日常琐事，正是我从心底一直追求的。以前一直在脑海中回荡的“声音”，也在和妈妈不断的聊天中，不知不觉消失了。妈妈不论什么时候，都对我展露着笑容，而且，满心欢喜地听着我说话。真的，真的，好幸福。也办过好几次过夜聚会，在 LAB，在妈妈家，在琉华君家。我们一边吃点心一边聊天到深夜，晚上和妈妈睡在同一床被子里。在被窝里，两个人小声地唱着那首歌，那首妈妈说的“把两人连接在一起”的歌。  
+的确，那首歌把我和妈妈连接在了一起。  
 我小时候，从妈妈那里学会那首歌；  
 妈妈是从铃羽姐姐那里听来的；  
 铃羽姐姐是从由季小姐那里听来的；  
