--- a/article/sg0/doc/0138.md
+++ b/article/sg0/doc/0138.md
@@ -1,119 +1,92 @@
 # 盟誓的文艺复兴 - 16
 > 1.055821  
-> [ 2011/02/06 ] 
+> [ 2011/12/18 ] 通过 D-RINE 传达了世界可以被欺骗的信息。凶真决心改变过去，与红莉栖重逢，带领 LABMem 全员执行「*Operation·Helhelm*」。  
 
-| [←prev](./0131) | [menu](../) | [next→](./0133) |
+| [←prev](./0137) | [menu](../) | [next→](./0139) |
 
 ---
-
-那之后过了几天。今天是周日，上午真由理的 cosplay 伙伴们，吹雪、枫、由季来 LAB 玩，现在到了要离开的时间。  
-“那，真由喜，我们还会来的。”  
-“嗯，再会\~”  
-“下次琉华君也一起 cosplay 吧。”  
-“啊，这个……那个……我会考虑的。”  
-“冈伦先生还有大家，打扰你们了。”  
-“嗯，随时可以再来。”  
-“嗯……”  
-“怎……怎么了？”  
-“冈伦，总觉得你的气场变了呢。”  
-“是……吗？”  
-“嗯，总觉得比以前好交往多了。”  
-“真是的，吹雪，当面说很失礼哦。”  
-“诶？枫刚刚不也是这么说的嘛。”  
-“等、等等！”  
-“诶嘿嘿\~。”  
-“真是的。”  
-“啊，那么，我也该告辞了。”  
-“啊，今天也打工？”  
-“是，结束后再联络。定一下周末的要做的事吧。”  
-“OK。那我等着你的联络。”  
-“什么什么，发生什么了喵。桶子喵和由季喵之间气氛真好呢。”  
-“是，是吗？啊，但是我对菲利斯碳的爱意也分毫不减哦。”  
-“真是的，爸爸，你又这样！”  
-
-“围绕着牧濑红莉栖的记忆和『Amadeus』的骚动全部平息，平和的日常生活又回到了我的身边。”  
-“发生在东京电机大学地下室的事，迄今为止还没有任何报道。”  
-“事后第二天再去学校，地下室已经被封锁住了，说是某个实验失败引起了事故。”  
-“恐怕是被军队或是 STRATFO 处理掉了吧。”  
-“在那之后，我的周围暂时还没有不协调的气氛。”  
-“那个地方应该没有留下任何与我们有关的痕迹。”  
-“大概，事情也不会波及到我们这边来吧。”  
-“话说回来，那到底是怎么回事啊。”  
-““那”是说？”  
-“那个女的在给篝下载记忆的时候，不是很顺利啊。”  
-“只是系统没有好好运行而已？”  
-“桶子喵说得对喵。没必要想那么多喵。”  
-“嗯——，真是这样吗。总觉得很在意。”  
-“话说，那时。”  
-“看起来一直在深思着什么的篝开口道。”  
-“没什么，但是……”  
-“喂喂，篝。话不要说到一半就停啊。吊我胃口。”  
-“那时，我感觉听到了什么声音。”  
-“声音？”  
-“嗯。在脑海深处，也不知道是谁在喊“不行——！”。”  
-“那时的事我几乎都不记得了，所以可能只是梦或者是别的什么……”  
-“Amadeus……”  
-“会不会是『Amadeus』？”  
-“说不定“红莉栖”在最后的最后，阻止了自己的记忆被写入篝的脑中……”  
-“对真帆来说，真是不合逻辑的意见啊。”  
-“不过，听了真帆的话，琉华子和真由理看向了对方。”  
-“那个……在我们最后一次启动『Amadeus』的时候，中途通信就被切断了。”  
-“明明冈伦的 bot 就还在说话，但她不知怎么的好像很慌张的样子，就中断了连接。”  
-“难道，在那个时候……”  
-“不过，这种事可能吗？”  
-“不知道。不过，『Amadeus』应该也和人类一样，有自我防卫的本能吧。”  
-“所以，发现自己的记忆要被用到不好的事情上……也不是不可能。”  
-“虽然不是在现在这个世界线，红莉栖的记忆在篝脑中存在的事也发生过。”  
-“说不定在这里，“红莉栖”一直防备着自己被再一次利用，从而波及到篝。”  
-“真正的原因可能另外还有，但至少我想要这么认为。”  
-“呐，冈伦。其实我也有一件不明白的事。”  
-“是什么？”  
-“按你的说法，至今为止『Amadeus』作为原因，引起了数次世界线变动吧？”  
-“可是，我们还记得那时的事，就意味着这次没有发生变动吧？这是为什么？”  
-“啊，关于这个吗。”  
-“这也是我在那之后马上考虑的问题。”  
-“恐怕，至今为止的世界线变动的原因，可以认为是  
- **根据我们对『Amadeus』采取的行动，将红莉栖的记忆交到了谁手中**。”  
-根据得到了『Amadeus』的人的行为，过去就会相应地被改变吧。  
-“但这次，作为原因的『Amadeus』和红莉栖的记忆本身被删除了。  
- 原因被消除了，相应的世界线变动也就不会发生了……大概是这样。”  
-STRATFO 和 DURPA 争端的火种被消除了，红莉栖留下的数据也被破坏了。红莉栖的记忆这份遗产，以此为媒介连接起来的未来都不复存在了。但是，现在铃羽和篝还在我的眼前。她们两个还在这里，就意味着未来还没有改变。这当然也是早就明白的——世界线的收束，在抵达命运石之门之前，都没法改变。即使如此，这次的事件肯定不是无用的。在那个时候——2036 年的世界察觉到的微小的灵感。这个世界，应该就是为了连接到那里所做的准备。  
-“那么，接下来要怎么办？”  
-是啊，虽然有很多要做的事，不过在那之前……我从白衣的口袋里掏出了准备好的东西。  
-“那么，我有礼物要送给大家。”  
-“这是……？”  
+那场骚动之后过了快一年，真帆久违地来到了未来装置研究所。  
+桶子：“哦？来了来了。”  
+真帆：“好久不见了，各位。”  
+真由理：“哇，是真帆小姐啊。我好想你啊\~嘟嘟噜\~♪”  
+琉华子：“好久不见，真帆小姐。”  
+菲莉丝：“真帆喵这么精神比什么都好喵。”  
+真帆：“嘿嘿，看大家都没什么变化我也安心了。”  
+铃羽：“你也是，还是老样子啊。”  
+真帆：“反正我还是这么小对吧。”  
+铃羽：“我不是那个意思啦。”  
+真帆：“我知道，开玩笑的啦。”  
+篝：“呜…………”  
+真帆：“怎、怎么了？”  
+篝：“这一年都没有见到真帆小姐，好寂寞啊\～”  
+真帆：“等、等等！也不用抱得这么紧……”  
+篝：“可是……可是……”  
+真帆：“抱歉……本来夏天就想来的，可是大学里也有很多事……”  
+那场骚动给真帆她们的研究所带来了很大的问题，这是理所当然的。不止是『Amadeus』，莱耶丝教授还有许多大学相关人员，都跟那个事件有关。  
+“辛苦你从那么远的地方过来，真帆。”  
+“这是应该的，毕竟我也跟这件事有不小的关系，过来亲眼见证也是我的该做的。”  
+“可是，真的好吗？这一年的善后都会白费哦？”  
+“不会白费的。  
+ 况且，你不是说，这个世界的未来和过去是连接在一起的吗？  
+ 所以我也只是在这个世界做了我该做的事罢了。”  
+“……啊，是啊。”  
+2036年，应该在 2025 年已经死去的我还活着，这一事实把所有人都欺骗了，不论是过去的我，还是未来的所有人——世界，被欺骗了。本以为既定的未来，却以不同的形式实现了。  
+那么，我是不是也能欺骗世界呢？  
+**通过欺骗世界，不就能回避已经确定的未来吗**？  
+世界如果能被欺骗的话——不就能抵达命运石之门吗？  
+然而，要怎样去欺骗，很遗憾，现在的我还找不到方法。即使这样，未来的我也说了，众多未来的前方，都会和过去连接在一起。那么，现在我应该做的事只有一件——  
+“桥田先生，那个东西已经做好了吗？”  
+“当然，应该已经可以用了。”  
 
 ![](../static/image/0138-1.png)
 
-“LABMem 徽章——我们全员作为 LAB 成员的证明。”  
-OSHMKUFAHSA——徽章上，刻着所有成员名字的首字母。当然，红莉栖和萌郁的名字也在上面。新追加了比屋定真帆、椎名篝、还有阿万音由季的名字。  
-“把过去和可以认为是过去的未来联系起来。”  
-“这就是现在的我该做的事。”  
-“LABMem……”  
-“篝很开心地，把徽章抱在胸前。”  
-“我的宝物，又多了一个。”  
-“今后我们要走的道路，大概会是更加艰辛的荆棘之路。”  
-“但光肯定会存在。”  
-“我，好像有点明白红莉栖和冈伦关系很好的理由了……”  
-“我也是，终于知道为什么爸爸爸爸他们这么依靠冈伦叔叔了……”  
-“我也知道妈妈为什么一直喜欢冈伦叔叔了……”  
-“篝、篝酱。不是的，真由喜只是冈伦的人质。所以那种事……”  
-“等、这、什么？只有冈伦这么受欢迎不可原谅！现充爆炸吧！”  
-“爸爸爸爸你已经有妈妈了吧！”  
-“无数的未来和无数的过去。”  
-“都一定会在收束的地方相遇。”  
-“所以——”  
+开发室的深处放着陈旧的微波炉造型的装置。是在那场骚乱中，在真帆的帮助下成功再现的时间跳跃装置，如今桶子为它追加了新的机能。  
+“话说回来，竟然是这样的东西在掌握着世界的命运啊。”  
+没错，所有的事情都是从这里开始的。我们的命运、红莉栖的命运，都是被它玩弄的结果。和原来的电话微波炉（暂定）的一个不同点在于，和它连接的手机变成了智能手机。向过去发送的邮件，无论如何都会被 SERN 捕捉到。那样的话，我们又会被 SERN 盯上，也就等同于，把牺牲了红莉栖选择的这个世界，再次卷入到灾祸中，那就没有意义了。但是，现在的通信手段不止邮件，还有别的传递消息的方法，我们现在频繁使用的 RINE 也是其中之一。  
+“就命名为 **D-RINE** 吧。”  
+当然，把文字信息发送回过去的原理是一样的，利用显像管电视的电子来控制重力，从而使信息通过奇点。另外，能发送的文字数和 D-Mail 一样，也是 18 个文字。不过，这样就不用担心会被 SERN 捕捉到，应该也不用担心真由理会再次牺牲了。问题是，无法向 RINE 成为通信手段之前的时间点发送信息，这也是没办法的。现在，**把可能性都连接起来**，才是最重要的事项。  
+“真是的，为了实现你的需求，不能被任何方面捕捉到，我费了好大功夫来着。  
+ 只是为了找漏洞，就花了好长时间的说。”  
+虽然抱怨，桶子还是完美地达到了我的要求，真是干得漂亮。  
+“不愧是 *My·Favorite·Right·Arm*。”  
+“啊，真是怀念的称呼。”  
+“可是，冈伦，这样真的好吗？”  
+“是啊喵，再做这件事，凶真又会有痛苦的回忆了不是喵？”  
+“大概会吧……”  
+“那你还——”  
+“但是，即使如此，我也必须去做。”  
+“冈伦……”  
+我明白真由理她们在担心，我会再次受到打击而消沉。可是，这样下去的话，一定会发生第三次世界大战，铃羽和篝还在这里就很能证明了。前方只能通往一个未来，但是，为了抵达命运石之门，应该还存在其他必要的未来。为了到达那个未来，必须回到过去重来一遍。没关系的，现在的我，无论多少次都能重来。无论会发生什么，都一定能够克服，直到到达约定之门的那一天。为此准备的信息已经写好了，**我一定是为了传递这个信息而来到的这条世界线的**。当然，我也不知道收到信息的我会怎么想，怎么行动。即使如此，我也一定能做到。一定能连接上，其他的未来，以及过去。  
 
-“啊，是我……”  
-“什么？你说，什么时候来救你？”  
-“别急。现在还没到那个时候。”  
-“哼哼哼……你以为我是谁？听好了？狂气的疯狂科学家，凤凰院凶真决不会食言。”  
-“所以，你暂时等着就好。”  
-“总有一天，我会从束缚着你的时间的诅咒之中，把你解救出来。”  
-“啊……绝对的……”  
-“红莉栖——到再见之时。”  
-“我会把我所有的思念都奉献给你。  
- *El·Psy·Congroo!*” 
+“篝……你觉得不安吗？”  
+“因为……如果，过去改变了，和平的时代到来了……说不定我就没法和妈妈相遇了……”  
+“篝酱……”  
+“不用担心。”  
+“诶……？”  
+“根据世界线收束理论，该发生的事一定会发生，已经这么定好了。  
+ 就算世界线改变了，你也能和真由理相遇的。”  
+“真的吗！？”  
+“嗯，我保证。”  
+“妈妈！”  
+“太好了，篝酱，有冈伦的保证就能安心了哦\～在未来，我们肯定会相遇的。”  
+“嗯！”  
+“叔叔，谢谢……”  
+“不用道谢，本来就是我播下的种子。”  
+而且，真正麻烦的是今后的事。  
+“不，即使如此我也要说，谢谢。”  
+“那个台词，爸爸也要！也对爸爸说 Please！”  
+“爸爸也是，谢谢。”  
+“再来一次！视线再往上一点，眼含泪光地再说一次吧，我的女儿！”  
+改变了过去的话，这一年来我好不容易做到的事都会相当于没发生过。经历了未来的事也好，花了恍若隔世般漫长的时间再次回来的事也好，但这并不代表，那些经验都会白费。现在的我，和即将踏上旅程的过去的我，还有这之后的未来——把那些经验都交汇起来之后，连接着未来的那扇门——命运石之门 *Steins;Gate*——一定在等着我们。
+
+![](../static/image/0138-2.png)
+
+“那么要上了！以凤凰院凶真的名义，现在开始实行新的作战——  
+ 「*Operation·Helhelm*（海伦海姆）」！LABMem 全员，都准备好了吗！？”  
+“*Okey-dokey!*”  
+为了找到那个方法，我将再次改变过去——红莉栖，为了有朝一日，能与你重逢。  
+
+![](../static/image/0138-3.png)
 
 
 <br/>
@@ -121,4 +94,4 @@ OSHMKUFAHSA——徽章上，刻着所有成员名字的首字母。当然，红
 > (to be continued)
 ---
 
-| [←prev](./0129) | [menu](../) | [next→](./0131) |
+| [←prev](./0137) | [menu](../) | [next→](./0139) |
